# BACpypes3

./: .flake8  .gitignore  .gitlab-ci.yml  Pipfile  README.md  bdist.sh  check-install.py  check-install.sh  check_install.sh  pyproject.toml  release_to_pypi.sh  release_to_testpypi.sh  setup.py  testpypi_install_bacpypes3.sh
bacpypes3/: __init__.py  __main__.py  analysis.py  apdu.py  app.py  appservice.py  argparse.py  basetypes.py  cmd.py  comm.py  console.py  constructeddata.py  debugging.py  errors.py  netservice.py  npdu.py  object.py  pdu.py  primitivedata.py  settings.py  vendor.py
samples/: BACpypes.ini  BACpypes.json  BACpypes.yml  apdu-hex-decode.py  bacnet-autoscan-network.py  cmd-address.py  cmd-debugging.py  cmd-samples.py  console-ase-sap.py  console-ini.py  console-json.py  console-prompt.py  console-yaml.py  console.py  cov-client-shell.py  cov-client.py  cov-server.py  custom-cache.py  custom-client.py  custom-device-cache.py  custom-router-cache.py  custom-routing-cache.py  custom-server-json.py  custom-server.py  custom.py  device-object-init-1.py  device-object-init-2.py  discover-devices.py  discover-objects-csv.py  discover-objects-rdf.py  discover-objects-rdf.ttl  discover-objects.py  file-console.py  file-server.py  file-services.md  find-device-by-address.py  find-device-by-instance.py  get-alarm-summary-client.py  get-alarm-summary-server.py  ip-to-vlan.json  (+31 more)
sandbox/: calendar-server.py  discover-ipv4-foreign-build.sh  discover-ipv4-foreign-run.sh  discover-ipv4-foreign-save.sh  discover-ipv4-foreign.dockerfile  discover-ipv4-foreign.py  (+23 more)
(+186 files in other folders)
