[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bacpypes3"
dynamic = ["version"]
description = "BACnet Communications Library"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Joel Bender", email = "joel@carrickbender.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
websockets = ["websockets"]
ifaddr = ["ifaddr"]
yaml = ["PyYAML"]
rdflib = ["rdflib"]

[project.urls]
Homepage = "https://github.com/JoelBender/bacpypes3"
Repository = "https://github.com/JoelBender/bacpypes3"

[tool.hatch.version]
path = "bacpypes3/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bacpypes3",
]

[tool.hatch.build.targets.wheel]
packages = ["bacpypes3"]
